--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Duva</h1>
+        <h1>DUVA</h1>
     </header>
     <div class="container">
         <div class="heading"><h2>Medical Information Form</h2></div>
