--- a/selectFormat.html
+++ b/selectFormat.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Duva</h1>
+        <img src="Duva Logo.svg" height="100em">
     </header>
     <div class="container">
         <h2>Select Export Format</h2>
